--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -31,7 +31,37 @@
     gap: 1em;
 }
 
+/* Menu lateral */
 
+.menu__container{
+    position: fixed;
+    bottom: 0;
+    height: 75px;
+    width: 100%;
+}
+
+.menu__lista{
+    display: flex;
+    justify-content: space-around;
+    height: 100%;
+}
+
+.menu__lista li{
+    align-self: center;
+}
+
+.menu__itens{
+    display: flex;
+    flex-direction: column;
+    gap: 0.3em;
+    justify-content:;
+}
+
+.menu__lista:nth-child(2),
+.menu__lista:nth-child(3),
+.menu__lista:nth-child(4){
+    display: none;
+}
 
 @media (min-width: 834px){
     
