--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -12,8 +12,44 @@
     display: none;
 }
 
-/* Rodapíe */
+/* Seccion videos */
+.videos__item{
+    height: 300px;
+    width: 280px;
+    flex-grow: 1;
+    padding: 0.5em;
+}
 
+.videos__container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5em;
+}
+
+.descripcion-video {
+    margin-top: 1rem;
+    display: flex;
+    align-items: start; 
+    
+}
+
+.descripcion-video img {
+    margin-right: 1rem; 
+    flex-shrink: 0;  /*  Evita que la imagen se reduzca */
+    
+}
+
+.detalles__video {
+    flex-direction: column;
+    text-align: left;
+
+}
+
+.detalles__video h3{
+    margin-bottom: 10px;
+}
+
+/* Rodapíe */
 .rodapie__container{
     display: flex;
     /* flex-direction: column;
@@ -131,4 +167,6 @@
     .premium{
         order: 1;
     }
+
+    
 }
